@startuml RoadAid_ER_Diagram

hide circle
skinparam linetype ortho
skinparam shadowing false
skinparam packageStyle rectangle

entity "users" as users {
  * id : BIGINT
  --
  full_name : VARCHAR(100)
  email : VARCHAR(100)
  phone : VARCHAR(15)
  password : VARCHAR(255)
  role : VARCHAR(30)
  profile_image : VARCHAR(255)
  is_active : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "service_providers" as sp {
  * id : BIGINT
  --
  user_id : BIGINT <<FK>>
  experience_years : INT
  verification_status : VARCHAR(20)
  average_rating : DECIMAL
  total_reviews : INT
  completed_jobs : INT
  online_status : VARCHAR(20)
  bio : TEXT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "workshops" as workshops {
  * id : BIGINT
  --
  provider_id : BIGINT <<FK>>
  workshop_name : VARCHAR(100)
  address : TEXT
  latitude : DECIMAL
  longitude : DECIMAL
  opening_time : TIME
  closing_time : TIME
}

entity "provider_services" as ps {
  * id : BIGINT
  --
  provider_id : BIGINT <<FK>>
  service_name : VARCHAR(30)
}

entity "provider_capabilities" as pc {
  * id : BIGINT
  --
  provider_id : BIGINT <<FK>>
  vehicle_type : VARCHAR(30)
  fuel_type : VARCHAR(20)
}

entity "vehicles" as vehicles {
  * id : BIGINT
  --
  user_id : BIGINT <<FK>>
  vehicle_type : VARCHAR(30)
  brand : VARCHAR(50)
  model : VARCHAR(50)
  registration_number : VARCHAR(20)
  fuel_type : VARCHAR(20)
  created_at : TIMESTAMP
}

entity "service_requests" as sr {
  * id : BIGINT
  --
  user_id : BIGINT <<FK>>
  provider_id : BIGINT <<FK>>
  vehicle_id : BIGINT <<FK>>
  service_type : VARCHAR(30)
  request_type : VARCHAR(30)
  problem_description : TEXT
  latitude : DECIMAL
  longitude : DECIMAL
  status : VARCHAR(30)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "quotations" as quotations {
  * id : BIGINT
  --
  request_id : BIGINT <<FK>>
  labour_charge : DECIMAL
  parts_charge : DECIMAL
  travel_fee : DECIMAL
  platform_fee : DECIMAL
  total_amount : DECIMAL
  status : VARCHAR(20)
  created_at : TIMESTAMP
}

entity "payments" as payments {
  * id : BIGINT
  --
  quotation_id : BIGINT <<FK>>
  amount : DECIMAL
  tip_amount : DECIMAL
  payment_method : VARCHAR(30)
  payment_status : VARCHAR(30)
  payment_date : TIMESTAMP
}

entity "reviews" as reviews {
  * id : BIGINT
  --
  request_id : BIGINT <<FK>>
  user_id : BIGINT <<FK>>
  provider_id : BIGINT <<FK>>
  rating : INT
  review : TEXT
  created_at : TIMESTAMP
}

entity "complaints" as complaints {
  * id : BIGINT
  --
  request_id : BIGINT <<FK>>
  user_id : BIGINT <<FK>>
  complaint_type : VARCHAR(50)
  description : TEXT
  status : VARCHAR(20)
  created_at : TIMESTAMP
}

entity "notifications" as notifications {
  * id : BIGINT
  --
  user_id : BIGINT <<FK>>
  title : VARCHAR(100)
  message : TEXT
  is_read : BOOLEAN
  created_at : TIMESTAMP
}

entity "favorites" as favorites {
  * user_id : BIGINT <<FK>>
  * provider_id : BIGINT <<FK>>
}

entity "system_logs" as logs {
  * id : BIGINT
  --
  user_id : BIGINT <<FK>>
  action : VARCHAR(255)
  timestamp : TIMESTAMP
}

entity "request_status_history" as history {
  * id : BIGINT
  --
  request_id : BIGINT <<FK>>
  status : VARCHAR(30)
  changed_at : TIMESTAMP
}

users ||--o| sp : "is"
users ||--o{ vehicles : owns
users ||--o{ sr : creates
users ||--o{ notifications : receives
users ||--o{ complaints : submits
users ||--o{ reviews : writes
users ||--o{ logs : generates
users ||--o{ favorites : bookmarks

sp ||--o| workshops : owns
sp ||--o{ ps : offers
sp ||--o{ pc : supports
sp ||--o{ sr : accepts
sp ||--o{ reviews : receives
sp ||--o{ favorites : bookmarked

vehicles ||--o{ sr : used_in

sr ||--|| quotations : has
quotations ||--|| payments : paid_by

sr ||--o| reviews : receives
sr ||--o{ complaints : related_to
sr ||--o{ history : status_updates

@enduml